--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simplicy.info",
   "description": "A Personal Site.",
-  "author": "Sean",
+  "author": "Simplicy",
   "private": true,
   "version": "0.1.0",
   "type": "module",
