--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-html-parser": "^2.0.6",
+    "@types/three": "^0.158.2",
     "auth0": "^4.8.0",
     "base-64": "^1.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.1",
+    "gl-react": "^5.2.0",
+    "gl-react-dom": "^5.2.1",
     "js-cookie": "^3.0.5",
     "motion": "^11.11.17",
+    "quad-shader": "^0.0.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.17.0",
     "react-dom": "^18.2.0",
@@ -38,11 +42,15 @@
     "react-markdown": "^10.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.1",
+    "react-three-fiber": "^6.0.13",
     "react-toastify": "^10.0.4",
     "remark-gfm": "^4.0.1",
     "sass": "^1.83.4",
     "styled-components": "^6.1.12",
+    "three": "^0.176.0",
     "ts-node": "^10.9.2",
+    "ts-shader-loader": "^2.0.2",
+    "vite-plugin-glsl": "^1.4.1",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
