--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,18 @@
       "DOM",
       "DOM.Iterable"
     ],
+    "types": [
+      "node",
+      "jest",
+      "vite-plugin-glsl/ext"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
+    "allowJs": false,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
