--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "base-64": "^1.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.1",
+    "glslCanvas": "^0.2.6",
     "js-cookie": "^3.0.5",
     "motion": "^11.11.17",
     "quad-shader": "^0.0.3",
