--- a/.gitea/workflows/deploy.yml
+++ b/.gitea/workflows/deploy.yml
@@ -33,18 +33,18 @@ jobs:
         with:
           cmd: run build
           dir: ./
-      - name: Push
-        uses: s0/git-publish-subdir-action@develop
-        with:
-          repository: ${{ vars.OWNER }}/${{ vars.REPO }}
-          token: ${{ secrets.TOKEN }} # `GH_PAT` is a secret that contains your PAT
-        env:
-          REPO: self
-          BRANCH: build # The branch name where you want to push the assets
-          FOLDER: dist # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit
-      - name: Build and push
+      # - name: Push
+      #   uses: s0/git-publish-subdir-action@develop
+      #   with:
+      #     repository: ${{ vars.OWNER }}/${{ vars.REPO }}
+      #     token: ${{ secrets.TOKEN }} # `GH_PAT` is a secret that contains your PAT
+      #   env:
+      #     REPO: self
+      #     BRANCH: build # The branch name where you want to push the assets
+      #     FOLDER: dist # The directory where your assets are generated
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+      #     MESSAGE: "Build: ({sha}) {msg}" # The commit
+      # - name: Build and push
         uses: docker/build-push-action@v4
         args:
           VITE_API_URL: ${{vars.VITE_API_URL}}
